<resources>
    <string name="app_name">Do It</string>
    <string name="save">Save</string>
    <string name="new_task">New Task</string>
    <string name="tasks">Tasks</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">sign up</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_login">Already have account? Log in.</string>
    <string name="log_in">Log In</string>


</resources>